--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,10 +2,12 @@
 {% block header %}
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">TodoList</h1>
+    <h1 class="display-4"><a href="{% url 'list' %}">TodoList</a></h1>
+
+
     <p class="lead">TodoListで忘れずやろう！</p>
   </div>
-</div>>
+</div>
 {% endblock header %}
 {% block content %}
 <div class="alert alert-success" role="alert">
